# fortissimusbellator

./: .cpanel.yml  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  manage.py  package-lock.json  package.json  pyproject.toml  styles.css  tailwind.config.js
accounts/: emails.py  forms.py  models.py  test_contact_forms.py  tests.py  urls.py  views.py
assets/: styles.css
attachments/: admin.py  forms.py  models.py  tests.py  translation.py
blog/: admin.py  forms.py  managers.py  models.py  tests.py  translation.py  urls.py  views.py
breeding/: admin.py  apps.py  context_processors.py  forms.py  managers.py  models.py  signals.py  social_media.py  tests.py  translation.py  urls.py  views.py
chat/: README.md  admin.py  admin_aliases.py  admin_widgets.py  alias_suggestions.py  apps.py  assistant.py  business.py  catalog.py  domain.py  entities.py  experts.py  intents.py  knowledge.py  matching.py  model_catalog.py  model_selection.py  models.py  response_policy.py  runtime.py  search_index.py  search_registry.py  service.py  signals.py  test_alias_suggestions.py  tests.py  urls.py  views.py
discounts/: admin.py  apps.py  forms.py  models.py  services.py  tests.py
docs/: README.md  architecture.md  chat.md  commercial-workflows.md  domain-model.md  glossary.md  operations.md  pre-reservations.md  site-and-admin.md  testing-and-maintenance.md
editorjs/: apps.py  conf.py  widgets.py
fortissimusbellator/: admin.py  asgi.py  business.py  contact_details.py  deepl.py  emails.py  form_fields.py  googletrans.py  health.py  middleware.py  (+9 more)
(+339 files in other folders)
